seaqt/QtCore/gen_qfinalstate.h

class QEvent;
class QFinalState;
class QMetaObject;
class QState;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QFinalState QFinalState;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QState QState;
typedef struct QTimerEvent QTimerEvent;
QFinalState* QFinalState_new();
QFinalState* QFinalState_new2(QState* parent);
QMetaObject* QFinalState_metaObject(const QFinalState* self);
void* QFinalState_metacast(QFinalState* self, const char* param1);
int QFinalState_metacall(QFinalState* self, int param1, int param2, void** param3);
struct miqt_string QFinalState_tr(const char* s);
struct miqt_string QFinalState_trUtf8(const char* s);
struct miqt_string QFinalState_tr2(const char* s, const char* c);
struct miqt_string QFinalState_tr3(const char* s, const char* c, int n);
struct miqt_string QFinalState_trUtf82(const char* s, const char* c);
struct miqt_string QFinalState_trUtf83(const char* s, const char* c, int n);
bool QFinalState_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QFinalState_virtualbase_metaObject(const void* self);
bool QFinalState_override_virtual_metacast(void* self, intptr_t slot);
void* QFinalState_virtualbase_metacast(void* self, const char* param1);
bool QFinalState_override_virtual_metacall(void* self, intptr_t slot);
int QFinalState_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QFinalState_override_virtual_onEntry(void* self, intptr_t slot);
void QFinalState_virtualbase_onEntry(void* self, QEvent* event);
bool QFinalState_override_virtual_onExit(void* self, intptr_t slot);
void QFinalState_virtualbase_onExit(void* self, QEvent* event);
bool QFinalState_override_virtual_event(void* self, intptr_t slot);
bool QFinalState_virtualbase_event(void* self, QEvent* e);
bool QFinalState_override_virtual_eventFilter(void* self, intptr_t slot);
bool QFinalState_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QFinalState_override_virtual_timerEvent(void* self, intptr_t slot);
void QFinalState_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QFinalState_override_virtual_childEvent(void* self, intptr_t slot);
void QFinalState_virtualbase_childEvent(void* self, QChildEvent* event);
bool QFinalState_override_virtual_customEvent(void* self, intptr_t slot);
void QFinalState_virtualbase_customEvent(void* self, QEvent* event);
bool QFinalState_override_virtual_connectNotify(void* self, intptr_t slot);
void QFinalState_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QFinalState_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QFinalState_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QFinalState_staticMetaObject();
void QFinalState_delete(QFinalState* self);